# infolingo

./: LICENSE  README.md  infolingo.cabal
.stack-work/install/x86_64-linux/lts-7.14/8.0.1/lib/x86_64-linux-ghc-8.0.1/infolingo-0.1.0.0-JV4I9LfmPHYGogeKWylksX/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux/lts-7.14/8.0.1/pkgdb/: infolingo-0.1.0.0-JV4I9LfmPHYGogeKWylksX.conf  package.cache
src/: FileHandling.hs  Lib.hs  MarkdownParser.hs
test/: Main.hs  MarkdownParserSpec.hs  Spec.hs  example.md  test.html
