name:                infolingo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/infolingo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, MarkdownParser, FileHandling
  build-depends:       base >= 4.7 && < 5
                     , blaze-html
                     , directory
                     , filepath
                     , pandoc
                     , pandoc-types
  default-language:    Haskell2010

executable infolingo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , infolingo
  default-language:    Haskell2010

test-suite infolingo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Main, MarkdownParserSpec
  build-depends:       base
                     , infolingo
                     , directory
                     , pandoc
                     , pandoc-types
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/infolingo
